# giphy.alfredworkflow

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE  Makefile  README.md  Rakefile  alfred.swift  giphy.rb  imgpbcopy  imgpbcopy.swift  info.plist  paste  paste.swift  renovate.json
.github/: dependabot.yml
.github/workflows/: release.yml
src/: alphred.rs  errors.rs  giphy.rs  main.rs
workflow/: imgpbcopy  imgpbcopy.swift  info.plist
