[package]
name = "giphy-alfredworkflow"
version = "3.3.0"
authors = ["Alpha Chen <alpha@kejadlen.dev>"]
edition = "2021"

[dependencies]
alphred = "0.1"
error-chain = "*"
rayon = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
url = "*"
url_serde = "*"
