[package]
name = "giphy-alfredworkflow"
version = "4.0.5"
authors = ["Alpha Chen <alpha@kejadlen.dev>"]
edition = "2024"

[dependencies]
alphred = "*"
anyhow = "*"
rayon = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
url = { version = "*", features = ["serde"] }
